src/test/ui/rfc-2627-raw-dylib/link-ordinal-multiple.stderr
error: multiple `link_ordinal` attributes
  --> $DIR/link-ordinal-multiple.rs:6:5
   |
LL |     #[link_ordinal(1)]
   |     ^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/link-ordinal-multiple.rs:7:5
   |
LL |     #[link_ordinal(2)]
   |     ^^^^^^^^^^^^^^^^^^

error: multiple `link_ordinal` attributes
  --> $DIR/link-ordinal-multiple.rs:9:5
   |
LL |     #[link_ordinal(1)]
   |     ^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/link-ordinal-multiple.rs:10:5
   |
LL |     #[link_ordinal(2)]
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

